--- a/index.html
+++ b/index.html
@@ -13,33 +13,19 @@
 <header class="header">
   <div class="container">
     <div class="header-inner">
-      <a href="/" class="logo">
-        <img src="assets/images/logo/shineNews-logo.webp" alt="ShineNows" class="logo-icon">
+      <a class="logo" href="/">
+        <img class="logo-icon" src="/assets/images/logo/shineNews-logo.webp" alt="ShineNows">
         <span class="logo-text">ShineNows</span>
       </a>
       <nav class="nav" aria-label="Navigation principale">
-        <ul class="nav-list">
-          <li><a href="/services">Services</a></li>
-          <li><a href="/portfolio">Portfolio</a></li>
-          <li><a href="/blog">Blog</a></li>
-          <li><a href="/devis">Devis</a></li>
-          <li><a href="/contact">Contact</a></li>
-        </ul>
+        <ul class="nav-list"></ul>
       </nav>
       <div class="language-switcher">
-        <button class="language-toggle" type="button" aria-haspopup="true" aria-expanded="false">
-          <span class="language-active">FR</span>
-        </button>
-        <div class="language-menu" role="menu">
-          <button type="button" data-lang="fr">FR</button>
-          <button type="button" data-lang="en">EN</button>
-          <button type="button" data-lang="de">DE</button>
-        </div>
+        <button class="lang-current" type="button" aria-haspopup="true" aria-expanded="false">FR</button>
+        <div class="lang-dropdown" role="menu"></div>
       </div>
-      <button class="mobile-toggle" type="button" aria-label="Menu" aria-expanded="false">
-        <span></span>
-        <span></span>
-        <span></span>
+      <button class="burger-btn" type="button" aria-label="Menu" aria-expanded="false">
+        <span></span><span></span><span></span>
       </button>
     </div>
   </div>
